# DysonSpherain

./: .gitignore  .npmignore  ABLATION_REPORT.md  AGENTS.md  BENCHMARK_REPORT.md  BENCHMARK_SMOKE_2026-04-24.json  CHANGELOG.md  DYSON_SPHERAIN_MEMORY_RUNTIME_UPGRADE_REPORT.md  Makefile  README.md  REGRESSION_REPORT.md  REVISION_SUMMARY.md  SPEED_REPORT.md  TEST_RESULTS_2026-04-24.txt  UPGRADE_NOTES_2026-04-24.md  diagnosis.md  draft.md  draft_updated_after_regression_repair.md  draft_updated_multichannel.md  dysonspherain  dysonspherain.cmd  package.json  paper_revision_report.md  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/: config.toml
.codex-plugin/: plugin.json
base/: README.md  requirements.txt
docs/: agent_adapter.md  agent_memory_integration.md  architecture.md  benchmark_lab.md  benchmark_registry.md  candidate_admission_method.md  claude_code_hooks_setup.md  cli.md  codex_mcp_setup.md  compaction_system.md  conflict_resolution.md  context_compiler.md  context_composer.md  development.md  llm_provider_configuration.md  memory_lifecycle_manager.md  memory_os_overview.md  memory_schema.md  privacy.md  privacy_and_external_llm_policy.md  reproducibility.md  runtime_contract.md  schema.md  token_economy_evaluator.md  ui.md  ui_memory_cockpit.md  ui_modern_digital_aesthetic_guidelines.md
overlay/: run_external_benchmark_with_overlay.py
paper/: appendix_full.md  draft_neurips_ready.md  draft_neurips_rewrite.md  limitations_neurips.md  method_algorithms.tex
sample_data/: quickstart_notes.md  tokenizer_calibration_samples.jsonl
(+297 files in other folders)
